@@ -1,3 +1,13 @@
+2011-03-02 Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk.
+
+	* include/functions_reporting.php: added the call to
+	"get_agentmodule_status" without check the alerts status for the color.
+	 
+	* include/functions_db.php: in function "get_agentmodule_status" added new
+	parameter "$without_alerts" flag for check without alerts. 
+
 2011-03-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	Merged bugfix from trunk.
